[project]
name = "reposca"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cyrvan bouchard", email = "cyrvan.bouchard.ext@gitguardian.com"},
]
dependencies = [
    "aiohttp==3.9.1",
    "cryptography==41.0.7",
    "django==4.2.8",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
